<resources>
    <string name="app_name">多媒体交互终端</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_initialize">InitializeActivity</string>
    <string name="watch_film">观看影片</string>
    <string name="surf_internet">上网娱乐</string>
    <string name="advice">建议</string>
    <string name="evalution">评价</string>
    <string name="appointment">预约</string>
    <string name="func_setting">功能配置</string>
    <string name="server_setting">服务器配置</string>
    <string name="restar">重启</string>
    <string name="recharging">正在充电</string>
    <string name="not_recharging">电源未连接，请连接电源！</string>
    <string name="fragment_wait_plasm_title">等待献浆员</string>
    <string name="fragment_welcome_plasm_title">欢迎您</string>
    <string name="fragment_pressing_title">加压提示</string>
    <string name="fragment_puncture_title">穿刺提示</string>
    <string name="fragment_puncture_content">即将开始穿刺，请放松，如有任何不适，请告知护士</string>
    <string name="fragment_puncture_video">穿刺视频</string>
    <string name="fragment_puncture_evaluate">穿刺评价</string>
    <string name="fragment_puncture_evaluate_content">请您对刚才护士的穿刺水平进行评价，我们会认真听取您的意见！</string>
    <string name="fragment_collect_title">采集提示</string>
    <string name="fragment_collecting_title">采集中</string>
    <string name="fragment_collect_content">开始进入采集，采集过程中您有任何需要请点击电话护士会及时为您服务!</string>
    <string name="play_video">播放视频</string>
    <string name="fragment_pressing_conent">现在开始加压，如果有任何不适请告知护士</string>
    <string name="fragment_over_evaluate_conent">请您对整个献浆过程中护士的服务进行评价，我们会认真听取您的意见!</string>
    <string name="general_welcome">无偿献浆，送给生命的礼物！</string>
    <string name="sloganoneabove">您的献浆，是托起他人生命的希望！。</string>
    <string name="sloganonebelow">欢迎您来献浆！</string>
    <string name="thk_sloganonebelow">再次感谢您来献浆！</string>
    <string name="make_fist">请按照动画握紧拳头</string>


    <string-array name="week_day">

        <item>星期天</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
</resources>
